advanced/NGINX-Ingress-SessionAffinity/nginx-ingress-sa.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-sa
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"

spec:
  rules:
  - host: xxx.xxx.xxx.xxx.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: gethostname
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gethostname
  namespace: ingress-basic
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gethostname
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gethostname
  namespace: ingress-basic
  labels:
    app: gethostname
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gethostname
  template:
    metadata:
      labels:
        app: gethostname
    spec:
      containers:
      - name: gethostname
        image: torumakabe/gethostname:0.0.1
